This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
9/12/21: Added option to multi-hole combiner to turn off and not acquire
points outside a polygon when selecting points inside.

9/12/21: Prevented trimming in autoalignment to the template in Align to
Template.

9/10/21: Fixed rotations of multishot patterns produced by the combiner when
working with montage-based image coordinates, broken 8/23.

9/9/21: SEM_3-8-14
9/9/21: Stopped displaying full multishot pattern on the current point if some
positions are being skipped for it (In 3.8).

9/9/21: Fixed crash reordering dose-symmetric file when running from Navigator
(In 3.8). 

9/9/21: Stopped trying to ensure a dark reference in beam calibration routine
with OneView/Rio cameras (In 3.8).

9/7/21: Fixed crash when loading settings with Low Dose turned on but no area
selected.

9/7/21: Made header title line show "dosym" instead of "bidir" for
dose-symmetric series (In 3.8).

9/5/21: Fixed 27 settings not being saved, broken 8/4/21.

9/5/21: Made the timing for Refine ZLP in Navigator acquire be based on the
global time since last ZLP and stopped tests for periodic tasks from falling
through into test for whether far enough from last position.

9/4/21: SEM_3-8-13
9/4/21: Fixed corruption of autocentering parameters and crashes after
reloading or loading new settings (In 3.8).

9/4/21: Fixed Navigator acquire resuming when leave dialog with Postpone.

9/4/21: Made Align to Template not restore state when in Low Dose mode.

9/3/21: Prevented pushing STOP during mag and other such changes.

9/3/21: Added script command ImageMetadataToVar.

9/3/21: Made Echo preserve \r\n line endings in a string and print multiple
lines.  Also made it possible to pass \n and \r\n to a Python script without