@@ -76,7 +76,7 @@ static char THIS_FILE[] = __FILE__;
 #endif
 
 #define VERSION_STRING  "SerialEM Version 4.0.0beta"
-#define TAG_STRING      "(Tagged SEM_3-8-14, 9/9/21)"
+#define TAG_STRING      "(Tagged SEM_3-8-15, 9/22/21)"
 
 // Offsets for static window inside main frame
 #define STATIC_BORDER_TOP      0
